TESTS = 	chk_integrate chk_factor chk_normalize chk_partfrac chk_limit \
		chk_cas chk_geo chk_morley_demo chk_xavier \
		chk_fhan1 chk_fhan2 chk_fhan3 chk_fhan4 chk_fhan5 \
		chk_fhan6 chk_fhan8 chk_fhan0 \
		chk_fhan11 chk_fhan12 chk_fhan13 chk_fhan14 chk_fhan15 \
		chk_fhan16 chk_fhan17 chk_fhan19 chk_fhan20 \
		chk_fhan21 chk_fhan9 chk_fhan18 chk_fhan7
EXTRA_DIST = 	chk_integrate chk_factor chk_normalize chk_partfrac \
		chk_limit chk_cas chk_geo chk_fhan* chk_morley_demo chk_xavier \
		testintegrate testfactor testnormalize testpartfrac \
		testlimit testcas testgeo testother chk_other \
		integrate.out factor.out normalize.out partfrac.out \
		limit.out cas.out geo.out flanex \
		TP*sol.cas TP*sol.cas.out1 morley_demo.* xavier.* README
TESTS_ENVIRONMENT = top_srcdir=$(top_srcdir)
