nobase_dist_doc_DATA = \
geo/geo1 \
geo/geo2 \
geo/geo3 \
geo/geo4 \
geo/geo5 \
geo/geo6 \
geo/geo7 \
geo/geo8 \
geo/geo9 \
geo/napoleon \
geo/pointmorph \
geo/minimum.cxx \
geo/morleypuzzel \
geo/enveloppe3 \
geo/geo10 \
geo/geo11 \
geo/geo12 \
geo/geo13 \
geo/lieu1 \
geo/lieu2 \
geo/lieu3 \
geo/lieu4 \
geo/lieu5 \
geo/morleypara \
geo/morleytri6 \
geo/puissance.cas \
geo/pantalon \
geo/napoleon.cxx \
geo/demomorley2 \
geo/bezier \
geo/puissance2.cas \
geo/mediatrice.cxx \
geo/morley18 \
geo/morphing \
geo/pantalon2 \
geo/Ngone.cas \
geo/morley1.fig \
geo/morley2.fig \
geo/morley108 \
geo/mediane.cxx \
geo/morleylem \
geo/orbite.cas \
geo/envelopl \
geo/envelopp \
geo/envelopt \
geo/carres.cxx \
geo/terre.cas \
geo/demomorley.cxx \
geo/bissectrice.cxx \
geo/simpson.cxx \
geo/conj_harmonic1.cas \
geo/conj_harmonic2.cas \
geo/conj_harmonic3.cas \
geo/envelop3t \
geo/enveloppe \
geo/morleydess18 \
geo/equimorley \
geo/orthocentre.cxx \
geo/feuerbach.cxx \
arit/numeration \
arit/rsa.cxx \
arit/horner \
arit/estpremier \
arit/codage.cas \
arit/nbrediviseur \
arit/puissancerapide \
arit/inpg.cas \
demo/pgcd.cpp \
demo/random.tab \
demo/algos_integrale.cxx \
demo/bezout.cxx \
demo/napoleon.cxx \
demo/e05.tex \
demo/mediane.cxx \
demo/bissectrice.cxx \
demo/pgcd.cc \
demo/simpson.cas \
demo/inpg.cas \
demo/orthocentre.cxx \
recur/sphinx.cxx \
recur/plantes.cxx \
recur/sphynx.cxx \
recur/trisierpinski.cas \
recur/polygone.cxx \
recur/triangle.cxx \
recur/carre.cxx \
recur/flocon.cxx \
recur/session.cxx \
recur/peanoarc.cas \
recur/autres.cxx \
recur/permutation.cxx \
recur/dragon.cxx \
recur/peano.cxx \
groebner/cyclic3 \
groebner/cyclic4 \
groebner/cyclic5 \
groebner/cyclic6 \
polyfact/zimmer1 \
polyfact/zimmer2 \
polyfact/zimmer3 \
polyfact/zimmer4 \
polyfact/zimmer5 \
polyfact/zimmer6 \
polyfact/zimmer7 \
codage/rsa \
codage/group2lettres \
codage/julescesar \
codage/chiffrementaffine \
Makefile.am \
lewisw/lw4 \
lewisw/lwA \
lewisw/lwB \
lewisw/lwC \
lewisw/lwD \
lewisw/lwE \
lewisw/lwF \
lewisw/lwG \
lewisw/lwM \
lewisw/lwN \
lewisw/lwO \
lewisw/lwX \
lewisw/lwHL \
lewisw/lwM2 \
lewisw/lwN1 \
lewisw/lwPQ \
lewisw/fermat_gcd_mod_1var \
lewisw/fermat_gcd_mod_4var \
lewisw/fermat_gcd_1var \
lewisw/fermat_gcd_4var \
Exemples/arit/estprem.xws \
Exemples/arit/bezout.xws \
Exemples/arit/powmod.xws \
Exemples/arit/diviseur.xws \
Exemples/arit/potence.xws \
Exemples/arit/crible.xws \
Exemples/arit/premier.xws \
Exemples/arit/multpoly.xws \
Exemples/arit/multfft.xws \
Exemples/arit/makegf.xws \
Exemples/arit/prime.xws \
Exemples/arit/pollard.xws \
Exemples/demo/calcform.xws \
Exemples/demo/dft.xws \
Exemples/demo/graphe_proba.xws \
Exemples/demo/image.xws \
Exemples/demo/terre.jpg \
Exemples/demo/essai.png \
Exemples/demo/napoleon.xws \
Exemples/demo/polylogo.xws \
Exemples/demo/apmep.xws \
Exemples/demo/arit.xws \
Exemples/demo/milieu.xws \
Exemples/demo/milieux.xws \
Exemples/demo/oct06.xws \
Exemples/demo/anniversaire.xws \
Exemples/demo/dijkstra.xws \
Exemples/logo/fleur.xws \
Exemples/logo/sapin.xws \
Exemples/logo/tulipe.xws \
Exemples/logo/neige.xws \
Exemples/logo/poule.xws \
Exemples/logo/jeu.xws \
Exemples/poly/pgcd.xws \
Exemples/poly/racine.xws \
Exemples/poly/horner.xws \
Exemples/poly/reed_sol.xws \
Exemples/poly/yun.xws \
Exemples/poly/berle.xws \
Exemples/poly/cardan.xws \
Exemples/poly/hensel.xws \
Exemples/poly/afactor.xws \
Exemples/poly/aspolyof.xws \
Exemples/prog/gauss_jordan.xws \
Exemples/prog/conformal.xws \
Exemples/prog/arbre.xws \
Exemples/prog/exemple.xws \
Exemples/geo3d/cone.xws \
Exemples/geo3d/circon3d.xws \
Exemples/geo3d/animcube.xws \
Exemples/capes2006/2107.xws \
Exemples/capes2006/0307.xws \
Exemples/capes2006/2906.xws \
Exemples/capes2006/1707.xws \
Exemples/capes2006/3006.xws \
Exemples/capes2006/0707.xws \
Exemples/capes2006/0107.xws \
Exemples/capes2006/0807.xws \
Exemples/capes2006/1407.xws \
Exemples/capes2006/2007.xws \
Exemples/capes2006/0207.xws \
Exemples/climat/soleil.xws \
Exemples/climat/edc.xws \
Exemples/climat/vostok.xws \
Exemples/climat/global_temp.xws \
Exemples/climat/terre.jpg \
Exemples/climat/terre.xws \
Exemples/climat/energie.xws \
Exemples/climat/glace.xws \
Exemples/climat/neige.xws \
Exemples/climat/co2t150.xws \
Exemples/climat/insol.xws \
Exemples/climat/co2.xws \
Exemples/crypto/rsa.xws \
Exemples/crypto/codage.xws \
Exemples/crypto/reed_s.xws \
Exemples/crypto/cesar.xws \
Exemples/crypto/codelin.xws \
Exemples/opengl/surface.xws \
Exemples/opengl/sphere.xws \
Exemples/analyse/newton.xws \
Exemples/analyse/toile.xws \
Exemples/analyse/series_alt.xws \
Exemples/analyse/ode.xws \
Exemples/analyse/euler_ode.xws \
Exemples/analyse/pui.xws \
Exemples/analyse/gradconj.xws \
Exemples/analyse/grad_const.xws \
Exemples/analyse/mult_lagr.xws \
Exemples/analyse/lagrange_err.xws \
Exemples/analyse/signal.xws \
Exemples/geometrie/caustique.xws \
Exemples/geometrie/astroide.xws \
Exemples/geometrie/rouepoly.xws \
Exemples/geometrie/hexagone.xws \
Exemples/geometrie/capes.xws \
Exemples/geometrie/morley_puzzle.xws \
Exemples/geometrie/morley_demo.xws \
Exemples/geometrie/napoleon.xws \
Exemples/geometrie/simson.xws \
Exemples/geometrie/atelier.xws \
Exemples/geometrie/lieu_s05.xws \
Exemples/geometrie/animpav.xws \
Exemples/geometrie/intercourbe.xws \
Exemples/proba/moivre_laplace.xws \
Exemples/proba/montecarlo.xws \
Exemples/proba/moivre2.xws \
Exemples/proba/fluctuations.xws \
Exemples/proba/fluctuation2.xws \
Exemples/proba/confiance.xws \
Exemples/proba/gaussienne.xws \
Exemples/proba/vectgauss.xws \
Exemples/proba/ehrenfest.xws \
Exemples/proba/kolmogorov.xws \
Exemples/proba/poisson.xws \
Exemples/proba/galton.xws \
Exemples/proba/rejet.xws \
Exemples/proba/attente.xws \
Exemples/spects/pagerank.xws \
Exemples/spects/spec_proie.xws \
Exemples/spects/tpi.xws \
linalg/gaussjordan_noyau.cas \
linalg/gaussjordan_noyau1.cas \
morley/equimore \
morley/morleypara \
morley/trisectfig \
morley/figure1 \
morley/figure2 \
morley/demomorley1 \
morley/fiqure1 \
morley/calcul18 \
morley/morley18 \
morley/morley108 \
morley/morleynum \
morley/morley \
morley/puzzel \
morley/dessinlem \
morley/demonfig2 \
tortue/koch.cxx \
tortue/arbre.cxx \
tortue/sapin.cxx \
tortue/hilbert.cxx \
tortue/gosper.cxx \
tortue/dragon.cxx \
tortue/peano.cxx \
simulation/pains \
simulation/deplacement

install-exec-hook: 
	../mkinstalldirs $(DESTDIR)$(prefix)/share/giac/
	../mkinstalldirs $(DESTDIR)$(prefix)/share/giac/examples
	cp -Rf * $(DESTDIR)$(prefix)/share/giac/examples
